--- a/static/openapi/bamboo-api.yaml
+++ b/static/openapi/bamboo-api.yaml
@@ -29,6 +29,8 @@ paths:
         - E-commerce
       summary: Create Store Sale Order
       description: Creates a new store sale order for e-commerce transactions
+      security:
+        - ApiKeyAuth: []
       requestBody:
         required: true
         content:
@@ -36,16 +38,21 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateOrderRequest'
             example:
-              CustomerCode: "COD00011"
-              CustomerName: "Delta Corporate Inc."
-              Remark: "Order requested for the IT department."
-              BillDate: "2025-12-01"
-              OrderDetails:
-                - Code: "NET-900"
-                  Name: "Cisco Router RV340"
-                  Price: 5250.99
-                  Quantity: 1
-                  WarehouseId: 2
+              customerCode: "CHH2A100706"
+              customerName: "MEGALUZ S.A. DE C.V."
+              remark: "Pedido prueba Ecommerce"
+              billDate: "2025-11-10T13:45:00"
+              detail:
+                - code: "000002"
+                  name: "FREIDORA DE AIRE FDA08V"
+                  price: 550
+                  quantity: 100
+                  warehouseId: 1540416
+                - code: "000005"
+                  name: "FREIDORA DE AIRE FDA09A"
+                  price: 380
+                  quantity: 200
+                  warehouseId: 1540416
       responses:
         '200':
           description: Order created successfully
@@ -67,7 +74,7 @@ paths:
       summary: Cancel Store Order
       description: Cancels an existing store order
       security:
-        - BearerAuth: []
+        - ApiKeyAuth: []
       parameters:
         - name: orderId
           in: path
@@ -87,7 +94,7 @@ paths:
         '200':
           description: Order cancelled successfully
         '401':
-          description: Unauthorized - Invalid or missing authentication token
+          description: Unauthorized - Invalid or missing API key
         '404':
           description: Order not found
         '500':
@@ -95,39 +102,39 @@ paths:
 
 components:
   securitySchemes:
-    BearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-      description: Enter your bearer token
+    ApiKeyAuth:
+      type: apiKey
+      in: header
+      name: X-API-Key
+      description: API Key for authentication
 
   schemas:
     CreateOrderRequest:
       type: object
       required:
-        - CustomerCode
-        - CustomerName
-        - BillDate
-        - OrderDetails
+        - customerCode
+        - customerName
+        - billDate
+        - detail
       properties:
-        CustomerCode:
+        customerCode:
           type: string
           description: Unique customer code
-          example: "COD00011"
-        CustomerName:
+          example: "CHH2A100706"
+        customerName:
           type: string
           description: Customer company name
-          example: "Delta Corporate Inc."
-        Remark:
+          example: "MEGALUZ S.A. DE C.V."
+        remark:
           type: string
           description: Additional notes or remarks for the order
-          example: "Order requested for the IT department."
-        BillDate:
+          example: "Pedido prueba Ecommerce"
+        billDate:
           type: string
-          format: date
-          description: Date of the bill
-          example: "2025-12-01"
-        OrderDetails:
+          format: date-time
+          description: Date and time of the bill
+          example: "2025-11-10T13:45:00"
+        detail:
           type: array
           items:
             $ref: '#/components/schemas/OrderDetail'
@@ -135,33 +142,33 @@ components:
     OrderDetail:
       type: object
       required:
-        - Code
-        - Name
-        - Price
-        - Quantity
-        - WarehouseId
+        - code
+        - name
+        - price
+        - quantity
+        - warehouseId
       properties:
-        Code:
+        code:
           type: string
           description: Product code
-          example: "NET-900"
-        Name:
+          example: "000002"
+        name:
           type: string
           description: Product name
-          example: "Cisco Router RV340"
-        Price:
+          example: "FREIDORA DE AIRE FDA08V"
+        price:
           type: number
           format: decimal
           description: Unit price of the product
-          example: 5250.99
-        Quantity:
+          example: 550
+        quantity:
           type: integer
           description: Quantity ordered
-          example: 1
-        WarehouseId:
+          example: 100
+        warehouseId:
           type: integer
           description: Warehouse identifier
-          example: 2
+          example: 1540416
 
     CreateOrderResponse:
       type: object
